src/test/ui/unboxed-closures/unboxed-closures-infer-fnmut-missing-mut.stderr
error[E0596]: cannot borrow immutable local variable `tick` as mutable
  --> $DIR/unboxed-closures-infer-fnmut-missing-mut.rs:7:5
   |
LL |     let tick = || counter += 1;
   |         ---- help: make this binding mutable: `mut tick`
LL |     tick();
   |     ^^^^ cannot borrow mutably

error: aborting due to previous error

For more information about this error, try `rustc --explain E0596`.
